--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,10 @@
   "name": "ridibooks/doxphp2rst-with-depth",
   "type": "library",
   "license": "MIT",
-  "description": "convert doxphp to rst with directorizing.",
-  "version": "0.0.1-dev",
+  "description": "convert doxphp to rst with directorize.",
+  "version": "0.0.1",
   "require": {
-    "doxphp/doxphp": "dev-master"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+    "doxphp/doxphp": "dev-master",
+    "guiguiboy/php-cli-progress-bar": "^0.0.4"
+  }
 }
