--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "type": "library",
   "license": "MIT",
   "description": "convert doxphp to rst with directorize.",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "minimum-stability": "dev",
   "require": {
     "doxphp/doxphp": "dev-master",
     "guiguiboy/php-cli-progress-bar": "^0.0.4"
