Fix for ridi/doxphp.

--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,6 @@
   "type": "library",
   "bin": ["bin/phpdoc2rst"],
   "minimum-stability": "dev",
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/ridi/doxphp.git"
-    }
-  ],
   "description": "Convert PHPDoc to Rst with directory structure.",
   "version": "0.1.1",
   "authors": [
@@ -31,7 +25,7 @@
   },
   "require": {
     "php": "~7.1.0",
-    "doxphp/doxphp": "^0.2.2",
+    "ridi/doxphp": "^0.2.2",
     "guiguiboy/php-cli-progress-bar": "^0.0.4"
   }
 }
