--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   },
   "require": {
     "php": "~7.1.0",
-    "doxphp/doxphp": "dev-master",
+    "ridi/doxphp": "^0.2.2",
     "guiguiboy/php-cli-progress-bar": "^0.0.4"
   }
 }
